@@ -1,6 +1,8 @@
 2005-09-12  Sven Panne  <sven.panne@aedion.de>
 
-	* src/Makefile.am: Fixed typo.
+	* src/Makefile.am: Cleaned up and fixed include paths. Added
+	-no-undefined to libtool linker flags to prepare for building a
+	Windows DLL. Added some comments.
 
 2005-09-11  Sven Panne  <sven.panne@aedion.de>
 
